...
                                                <rect key="frame" x="0.0" y="0.0" width="290" height="21"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loan Amount:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="myC-yX-20y">
                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="21"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="29" width="290" height="21"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interest (%):" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qJu-hx-Bn0">
                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="21"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="58" width="290" height="21"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sales Tax (%):" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4W-px-zdG">
                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="21"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="87" width="290" height="21"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term (Months):" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQG-ud-UIZ">
                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="21"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="116" width="290" height="21"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Down Payment:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iDG-yK-lC6">
                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="21"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="145" width="290" height="21"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trade In:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drl-jV-ROg">
                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="21"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="174" width="290" height="21"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fees" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3CP-Em-HhC">
                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="21"/>
                                                        <constraints>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Kz-DT-Lyu" userLabel="lblMonthlyPayment">
                                                        <rect key="frame" x="190" y="0.0" width="100" height="21"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="lblMonthlyPayment"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bX0-bW-xk6" userLabel="lblTotalPayments">
                                                        <rect key="frame" x="190" y="0.0" width="100" height="21"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="lblTotalPayments"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKm-lS-uNQ" userLabel="lblTotalInterest">
                                                        <rect key="frame" x="190" y="0.0" width="100" height="21"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="lblTotalInterest"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EhC-fv-2AP" userLabel="lblTotalCost">
